--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="one_text_midle_size">13dp</dimen>
-    <dimen name="one_text_mini_size">12dp</dimen>
+    <dimen name="one_text_mini_size">11dp</dimen>
+    <dimen name="one_text_max_size">15dp</dimen>
     <dimen name="one_margin">20dp</dimen>
     <dimen name="toolbar_size">50dp</dimen>
 
@@ -15,4 +16,5 @@
     <dimen name="pickerview_topbar_title_textsize">18sp</dimen>
     <!-- 选项文字大小 -->
     <dimen name="pickerview_textsize">20sp</dimen>
+
 </resources>
