--- a/app/src/main/res/layout/item_webview.xml
+++ b/app/src/main/res/layout/item_webview.xml
@@ -4,12 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--<TextView-->
-
-        <!--android:id="@+id/text"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
-    <com.github.lzyzsd.jsbridge.BridgeWebView
+    <WebView
         android:id="@+id/wv_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
